feat: frontend built out
